force-app/main/default/objects/Account/fields/ucinn_ascendv2__Matching_Key_Value_1__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Key_Value_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to identify target duplicate organizations. Configured using Interim to Organization matching rule.</description>
    <inlineHelpText>Generated using executeCreateMatchingKVBatch() on Interim to Organization matching rule.</inlineHelpText>
    <label>Matching Key Value 1</label>
    <referenceTo>ucinn_ascendv2__Matching_Key_Value__c</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>