force-app/main/default/objects/Account/fields/ucinn_ascendv2__Matching_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Last_Updated__c</fullName>
    <label>Matching Last Updated</label>
    <type>Date</type>
</CustomField>