force-app/main/default/objects/Account/fields/ucinn_ascendv2__Matching_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Phone_Number__c</fullName>
    <label>Matching Phone Number</label>
    <type>Phone</type>
</CustomField>