force-app/main/default/objects/Account/fields/ucinn_ascendv2__Max_Amount_Matched__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Max_Amount_Matched__c</fullName>
    <label>Max Amount Matched</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>