force-app/main/default/objects/Account/fields/ucinn_ascendv2__Number_of_Consecutive_Giving__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Consecutive_Giving__c</fullName>
    <description>Consecutive Years of Giving from Cognos</description>
    <label># of Consecutive Giving</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>