force-app/main/default/objects/Account/fields/ucinn_ascendv2__Number_of_Household_Members__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Household_Members__c</fullName>
    <label>Number of Household Members</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>