force-app/main/default/objects/Account/fields/ucinn_ascendv2__Organization_Count_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Organization_Count_Formula__c</fullName>
    <description>Used by VSE reports.   Power of 1 approach.</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>