force-app/main/default/objects/Account/fields/ucinn_ascendv2__Original_Parent__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Original_Parent__c</fullName>
    <externalId>true</externalId>
    <label>Original Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>