force-app/main/default/objects/Account/fields/ucinn_ascendv2__Preferred_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Preferred_Address_Formula__c</fullName>
    <formula>IF(
(OR(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Line_1__c)), NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_City__c)), NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_State__c)), NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Postal_Code__c)), NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Country__c)))),


IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Line_1__c )), ucinn_ascendv2__Preferred_Address_Line_1__c &amp; IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Line_2__c )), &quot; &quot;, &quot;&quot;), &quot;&quot;) &amp;
IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Line_2__c )), ucinn_ascendv2__Preferred_Address_Line_2__c , &quot;&quot;) &amp;
IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Line_3__c )), BR() &amp; ucinn_ascendv2__Preferred_Address_Line_3__c , &quot;&quot;) &amp;
IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Line_4__c )), BR() &amp; ucinn_ascendv2__Preferred_Address_Line_4__c , &quot;&quot;) &amp;

IF(OR(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Line_1__c )), NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Line_2__c )), NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Line_3__c )), NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Line_4__c ))), BR(), &quot;&quot;) &amp;

IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_City__c)),
ucinn_ascendv2__Preferred_Address_City__c &amp; IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_State__c)), &quot;, &quot; ,
IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Postal_Code__c)), &quot; &quot; , BR())) ,
&quot;&quot;) &amp;

IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_State__c)), ucinn_ascendv2__Preferred_Address_State__c &amp; IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Postal_Code__c)), &quot; &quot; , BR()) , &quot;&quot;) &amp;
IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Postal_Code__c)), ucinn_ascendv2__Preferred_Address_Postal_Code__c &amp; BR() ,&quot;&quot;) &amp;

IF(NOT(ISBLANK(ucinn_ascendv2__Preferred_Address_Country__c)), ucinn_ascendv2__Preferred_Address_Country__c , &quot;&quot;)
, &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred Address</label>
    <type>Text</type>
</CustomField>