force-app/main/default/objects/Account/fields/ucinn_ascendv2__Presidential_Billing_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Presidential_Billing_Address_Formula__c</fullName>
    <formula>IF(
(OR(NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_Street_v1__c)), NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_City__c)), NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_State__c)), NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_Postal_Code__c)), NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_Country__c)))),

IF(NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_Street_v1__c)), ucinn_ascendv2__Presidential_Billing_Street_v1__c &amp; BR() , &quot;&quot;) &amp;

IF(NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_City__c)),
ucinn_ascendv2__Presidential_Billing_City__c &amp; IF(NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_State__c)), &quot;, &quot; ,
IF(NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_Postal_Code__c)), &quot; &quot; , BR())) ,
&quot;&quot;) &amp;

IF(NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_State__c)), ucinn_ascendv2__Presidential_Billing_State__c &amp; IF(NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_Postal_Code__c)), &quot; &quot; , BR()) , &quot;&quot;) &amp;
IF(NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_Postal_Code__c)), ucinn_ascendv2__Presidential_Billing_Postal_Code__c &amp; BR() , &quot;&quot;) &amp;

IF(NOT(ISBLANK(ucinn_ascendv2__Presidential_Billing_Country__c)), ucinn_ascendv2__Presidential_Billing_Country__c , &quot;&quot;)
,&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presidential Billing Address</label>
    <type>Text</type>
</CustomField>