force-app/main/default/objects/Account/fields/ucinn_ascendv2__Presidential_City__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Presidential_City__c</fullName>
    <label>Presidential City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>