force-app/main/default/objects/Account/fields/ucinn_ascendv2__Presidential_Country__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Presidential_Country__c</fullName>
    <label>Presidential Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>