force-app/main/default/objects/Account/fields/ucinn_ascendv2__Presidential_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Presidential_Postal_Code__c</fullName>
    <label>Presidential Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>