force-app/main/default/objects/Account/fields/ucinn_ascendv2__Presidential_Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Presidential_Shipping_Street__c</fullName>
    <label>Pres. Shipping Street (DEPRECATED)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>