force-app/main/default/objects/Account/fields/ucinn_ascendv2__Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Constituent</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Primary Constituent must exist within the household.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Organizations</relationshipLabel>
    <relationshipName>Accounts_Primary_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>