force-app/main/default/objects/Account/fields/ucinn_ascendv2__Profile_Picture_Formula__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Profile_Picture_Formula__c</fullName>
    <formula>IF($User.UIThemeDisplayed == &quot;Theme4t&quot;, IF(ISNULL(ucinn_ascendv2__Picture_Record_ID__c), IMAGE(&apos;/resource/DefaultProfilePicture&apos;, &apos;Profile Picture&apos;), IMAGE(&apos;/sfc/servlet.shepherd/version/download/&apos; + ucinn_ascendv2__Picture_Record_ID__c, &apos;Profile Picture&apos;)), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile Picture Formula</label>
    <type>Text</type>
</CustomField>