force-app/main/default/objects/Account/fields/ucinn_ascendv2__Retiree_Matching_Ratio__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Retiree_Matching_Ratio__c</fullName>
    <label>Retiree Matching Ratio</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>