force-app/main/default/objects/Account/fields/ucinn_ascendv2__Source_Unit__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Source_Unit__c</fullName>
    <label>Source Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Unit</valueSetName>
    </valueSet>
</CustomField>