force-app/main/default/objects/Account/fields/ucinn_ascendv2__Stage_of_Readiness__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stage_of_Readiness__c</fullName>
    <label>Stage of Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Screened</fullName>
            </value>
            <value>
                <fullName>Identify</fullName>
            </value>
            <value>
                <fullName>Assessed</fullName>
            </value>
            <value>
                <fullName>Qualify</fullName>
            </value>
            <value>
                <fullName>Cultivate/Open</fullName>
            </value>
            <value>
                <fullName>Negotiate/Close</fullName>
            </value>
            <value>
                <fullName>Steward</fullName>
            </value>
            <value>
                <fullName>Estate Gift</fullName>
            </value>
            <value>
                <fullName>Not a Prospect Now</fullName>
            </value>
            <value>
                <fullName>Not a Prospect Ever</fullName>
            </value>
            <value>
                <fullName>Annual Giving</fullName>
            </value>
            <value>
                <fullName>Major Gift Pipeline</fullName>
            </value>
            <value>
                <fullName>Leadership Gift Pipeline</fullName>
            </value>
            <value>
                <fullName>Leadership Donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>