force-app/main/default/objects/Account/fields/ucinn_ascendv2__Stage_of_Readiness_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stage_of_Readiness_LastModifiedById__c</fullName>
    <description>This is the Community Nickname of the User.</description>
    <label>Stage of Readiness Last Modified By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>