force-app/main/default/objects/Account/fields/ucinn_ascendv2__Stage_of_Readiness_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Stage_of_Readiness_LastModifiedDate__c</fullName>
    <description>Last Modified Date for the Stage of Readiness</description>
    <label>Stage of Readiness Last Modified Date</label>
    <type>DateTime</type>
</CustomField>