force-app/main/default/objects/Account/fields/ucinn_ascendv2__Subsidiary_Matching__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Subsidiary_Matching__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary Matching</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organizations (Subsidiary Matching)</relationshipLabel>
    <relationshipName>Accounts_Subsidiary_Matching</relationshipName>
    <type>Lookup</type>
</CustomField>