force-app/main/default/objects/Account/fields/ucinn_ascendv2__Third_Party_Matching__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Third_Party_Matching__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third-Party Matching</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organizations (Third-Party Matching)</relationshipLabel>
    <relationshipName>Accounts_Third_Party_Matching</relationshipName>
    <type>Lookup</type>
</CustomField>