force-app/main/default/objects/Account/fields/ucinn_ascendv2__Top_Most_Account__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Top_Most_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Top Most Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organizations (Top Most Organization)</relationshipLabel>
    <relationshipName>Accounts_Top_Most_Organization</relationshipName>
    <type>Lookup</type>
</CustomField>