force-app/main/default/objects/Account/fields/ucinn_ascendv2__Unit_of_Largest_Gift__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Unit_of_Largest_Gift__c</fullName>
    <label>Unit of Largest Gift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>