force-app/main/default/objects/Account/fields/ucinn_ascendv2__Wealth_Rating__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Wealth_Rating__c</fullName>
    <inlineHelpText>1=  $100M+
2=  $50M-$99.9M
3=  $25M-$49.9M
4=  $10M-$24.9M
5=  $5M-$9.9M
6=  $2.5M-$4.9M
7=  $1M-$2.49M
8=  $500K-$999K
9=  $250K-$499K
10= $100K-$249K
11= $50K-$99K
12= $25K-$49K
13= $12.5K-$24.9K
14= Suspect</inlineHelpText>
    <label>Wealth Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>