force-app/main/default/objects/Account/recordTypes/ucinn_ascendv2__Corporations_and_Organizations.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Corporations_and_Organizations</fullName>
    <active>true</active>
    <description>Accounts which represents Corporations/Organizations</description>
    <label>Corporations and Organizations Details</label>
</RecordType>