force-app/main/default/objects/Account/recordTypes/ucinn_ascendv2__Household.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Household</fullName>
    <active>true</active>
    <description>Accounts which represent a Household</description>
    <label>Household</label>
</RecordType>