force-app/main/default/objects/Account/recordTypes/ucinn_ascendv2__New_Corporations_and_Organizations.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__New_Corporations_and_Organizations</fullName>
    <active>true</active>
    <description>The record type that is used for creating a new Corporation and Organization</description>
    <label>Corporations and Organizations</label>
</RecordType>