force-app/main/default/objects/Account/listViews/Households_Only.listView-meta.xml
<ListView>
    <fullName>Households_Only</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ucinn_ascendv2__Primary_Contact__c</columns>
    <columns>Secondary_Constituent__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.ucinn_ascendv2__Household</value>
    </filters>
    <label>Households Only</label>
</ListView>