force-app/main/default/objects/Account/listViews/Organizations_Only.listView-meta.xml
<ListView>
    <fullName>Organizations_Only</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.ucinn_ascendv2__New_Corporations_and_Organizations,Account.ucinn_ascendv2__Corporations_and_Organizations</value>
    </filters>
    <filters>
        <field>ucinn_ascendv2__Current_FY_Giving__c</field>
        <operation>greaterOrEqual</operation>
        <value>100000</value>
    </filters>
    <label>Organizations Only</label>
</ListView>